# vutur

./: .gitignore  Makefile  README  module.py  pre-commit  pyproject.toml  requirements-dev.txt  requirements.txt
tests/: test_allocator.py  test_module.py  test_spirv.py  test_vulkan.py  test_vulkan_context.py
vgrad/: __init__.py  dataloader.py  np.py  optax.py  spirv_base.py  spirv_composite.py  spirv_instructions.py  vulkan.py
vgrad/tools/: spirv_generator.py
vutur/: __init__.py  allocator.py  autograd.py  flax.py  jit.py  module.py  optax.py  spirv.py  spirv_base.py  spirv_composite.py  spirv_instructions.py  vulkan.py  vulkan_context.py
vutur/tools/: spirv_generator.py
