[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vutur"
version = "0.0.1"
authors = [
    { name = "Victor van den Elzen", email = "victor.vde@gmail.com" },
]
requires-python = ">=3.10"
dependencies = ["vulkan>=1.3.275.1"]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "uv",
    # testing
    "pytest",
    "pytest-cov",
    # docs
    "pdoc",
]

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "vulkan.*"
ignore_missing_imports = true
